[package]
name = "json-rpc-server"
homepage = "https://github.com/shaorongqiang/json-rpc-server.git"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A framework for http server"

[dependencies]
anyhow = "1.0.72"
hyper = { version = "0.14.27", features = [
  "client",
  "http1",
  "http2",
  "tcp",
  "server",
] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
async-trait = "0.1.72"
log = "0.4.19"
