[package]
name = "json-rpc-server"
homepage = "https://github.com/shaorongqiang/json-rpc-server.git"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A framework for http server"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6"
http-body-util = "0.1"
bytes = "1.0"