[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
 
anyhow = "1.0.72"
async-trait = "0.1.72"

serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.104" 

tokio = { version = "1.0.0", features = ["full"] }

json-rpc-server = { path = "../../" }